# TestCoin

./: .directory  .gitignore  CMakeLists.txt  README.md  main.cpp
build_Unix/: .directory  CMakeCache.txt  EasyChain  Makefile  cmake_install.cmake
include/: block.cpp  block.h  blockchain.cpp  blockchain.h
